# socket_transfer

./: .gitignore  CMakeLists.txt  README.md  example.launch.py  package.xml
include/msg_types/: CompressedImage.hpp
include/socket_transfer/: BufferUtils.hpp  client_tcp.hpp  client_udp.hpp  packet.hpp  serialization.hpp  server_tcp.hpp  server_udp.hpp
include/socket_transfer/action/: ActionMsg.hpp  client.hpp  server.hpp  utils.hpp
include/socket_transfer/base/: client_tcp.hpp  node_udp.hpp  server_tcp.hpp  socketManager.hpp
include/socket_transfer/internals/: create_socket.hpp  packet.hpp  utils.hpp
include/socket_transfer/service/: MsgWithHeader.hpp  client.hpp  server.hpp
include/socket_transfer/topic/: client.hpp  server.hpp
launch/: test.launch.py
src/: Serialization.hpp  client_udp.cpp  packet.hpp  server_udp.cpp  sockets.cpp  utils.hpp
